Fix scrollbar on old chrome

--- a/client/modules/task/css/task.css
+++ b/client/modules/task/css/task.css
@@ -7,6 +7,7 @@ app-project-task-list .task-not-found{
 	width:300px;
 	height:300px;
 	font-size:250px;
+	overflow-y:hidden;
 }
 app-project-task-list .task-not-found div{
 	font-size:35px;
